polish apt based Tor install

--- a/playbooks/roles/setup_common/tasks/update-apt.yaml
+++ b/playbooks/roles/setup_common/tasks/update-apt.yaml
@@ -28,6 +28,7 @@
 - name: Install/Update common software
   ansible.builtin.apt:
     name:
+      - curl
       - git
       - needrestart
       - psmisc
