fix undefined variable if "Apt upgrade" is tagged and chosen

--- a/playbooks/roles/setup_common/tasks/kernel-dist.yaml
+++ b/playbooks/roles/setup_common/tasks/kernel-dist.yaml
@@ -3,9 +3,9 @@
   vars:
     _arch: "{{ (ansible_facts.architecture == 'x86_64') | ternary('amd64', 'arm64') }}"
     _cloud: "{{ kernel_debian_cloud | ternary('-cloud', '') }}"
+  when: kernel_debian_backports or kernel_debian_cloud
   block:
     - name: Install desired Debian kernel flavour
-      when: kernel_debian_backports or kernel_debian_cloud
       ansible.builtin.apt:
         default_release: "{{ ansible_facts.distribution_release }}{{ kernel_debian_backports | ternary('-backports', '') }}"
         name:
@@ -14,7 +14,7 @@
       notify: Reboot system
 
     - name: Handle new Debian kernel
-      when: _kernel_dist.changed
+      when: _kernel_dist is defined and _kernel_dist.changed
       block:
         - name: Reboot into new Debian kernel
           ansible.builtin.meta: flush_handlers
