--- a/playbooks/roles/setup_tor/tasks/lyrebird.yaml
+++ b/playbooks/roles/setup_tor/tasks/lyrebird.yaml
@@ -24,7 +24,7 @@
   register: _lyrebird_installed
 
 - name: Allow low port for Lyrebird
-  when: _lyrebird_installed.changed and tor_port | int < 1024
+  when: tor_port | int < 1024 and _lyrebird_installed.changed
   community.general.capabilities:
     path: /usr/bin/lyrebird
     capability: cap_net_bind_service+ep
