switch default of display_ok_hosts

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -16,8 +16,8 @@ remote_user = root
 
 ssh_args = -4 -o ForwardAgent=no -o ForwardX11=no -o StrictHostKeyChecking=yes -o ControlMaster=auto -o ControlPersist=60s -o GSSAPIAuthentication=no -o IdentitiesOnly=yes -o ServerAliveInterval=60s
 
-# overwrite: ANSIBLE_DISPLAY_OK_HOSTS=false
-display_ok_hosts = true
+# overwrite: ANSIBLE_DISPLAY_OK_HOSTS=true
+display_ok_hosts = false
 
 # overwrite: ANSIBLE_DISPLAY_SKIPPED_HOSTS=true
 display_skipped_hosts = false
