--- a/playbooks/roles/lib/_git.yaml
+++ b/playbooks/roles/lib/_git.yaml
@@ -1,6 +1,6 @@
 ---
 - name: Git
-  environment: "{{ git_environment | default([]) }}"
+  environment: "{{ git_environment }}"
   module_defaults:
     ansible.builtin.git:
       repo: "{{ _git_repo_url }}"
@@ -48,8 +48,9 @@
   register: __cleaned
 
 - name: Git patch "{{ _repo_dir }}"
-  throttle: "{{ _git_patches | ternary(8, 16) }}"
+  throttle: 8
   changed_when: __patched.stdout_lines is search('patching file ')
+  when: _git_patches
   ansible.builtin.shell:
     cmd: |-
       set -euf
@@ -65,5 +66,5 @@
 - name: Git repo changed "{{ _repo_dir }}"
   ansible.builtin.set_fact:
     _git_repo_changed: "{{  __repo.changed or __repo.before == None or
-      __updated.changed or __cleaned.changed or __patched.changed or
+      __updated.changed or __cleaned.changed or __patched is defined and __patched.changed or
       force_rebuild is defined and force_rebuild | bool }}"
