--- a/playbooks/roles/info_common/tasks/log-unattended.yaml
+++ b/playbooks/roles/info_common/tasks/log-unattended.yaml
@@ -9,5 +9,6 @@
 
 - name: Findings of unattended log
   when: _result.stdout
+  changed_when: true
   ansible.builtin.debug:
     var: _result.stdout_lines
