--- a/playbooks/roles/info_tor/tasks/heartbeat.yaml
+++ b/playbooks/roles/info_tor/tasks/heartbeat.yaml
@@ -10,5 +10,6 @@
 
 - name: Results of Heartbeat
   when: _result.stdout
+  changed_when: true
   ansible.builtin.debug:
     var: _result.stdout_lines
