--- a/playbooks/roles/info_tor/tasks/log-warn.yaml
+++ b/playbooks/roles/info_tor/tasks/log-warn.yaml
@@ -14,5 +14,6 @@
 
 - name: Results of warn log
   when: _result.stdout
+  changed_when: true
   ansible.builtin.debug:
     var: _result.stdout_lines
