--- a/playbooks/roles/info_common/tasks/minicoredumper.yaml
+++ b/playbooks/roles/info_common/tasks/minicoredumper.yaml
@@ -14,6 +14,7 @@
   when: _found.files is defined
   vars:
     _info: "{{ item.path }}    {{ item.size }}"
+  changed_when: true
   ansible.builtin.debug:
     msg: "{{ _info }}"
   loop_control:
