--- a/playbooks/roles/info_tor/tasks/log-err.yaml
+++ b/playbooks/roles/info_tor/tasks/log-err.yaml
@@ -9,5 +9,6 @@
 
 - name: Results of error log
   when: _result.stdout
+  changed_when: true
   ansible.builtin.debug:
     var: _result.stdout_lines
