--- a/playbooks/roles/setup_common/tasks/ipv6-hetzner.yaml
+++ b/playbooks/roles/setup_common/tasks/ipv6-hetzner.yaml
@@ -2,6 +2,7 @@
 - name: Ensure IPv6 address has valid prefix
   when: ansible_facts.default_ipv6.address is match('fe80::')
   failed_when: true
+  changed_when: true
   ansible.builtin.debug:
     var: ansible_facts.default_ipv6
 
@@ -69,5 +70,6 @@
 - name: Ensure IPv6 address is non-default
   when: ansible_facts.default_ipv6.address is search('::1$')
   failed_when: true
+  changed_when: true
   ansible.builtin.debug:
     var: ansible_facts.default_ipv6
