--- a/playbooks/roles/setup_common/tasks/main.yaml
+++ b/playbooks/roles/setup_common/tasks/main.yaml
@@ -87,10 +87,11 @@
           ansible.builtin.import_tasks: ipv6-ionos.yaml
 
         - name: Ensure IPv6 address is global scope
-          failed_when: ansible_facts.default_ipv6.address is match('fe80::')
+          when: ansible_facts.default_ipv6.address is match('fe80::')
+          failed_when: true
+          changed_when: true
           ansible.builtin.debug:
             var: ansible_facts.default_ipv6
-            verbosity: 1
 
     - name: Firewall
       ansible.builtin.import_tasks: firewall.yaml
