fixes a huge pile of typos and thinkos

--- a/playbooks/roles/info_base/defaults/main.yaml
+++ b/playbooks/roles/info_base/defaults/main.yaml
@@ -5,9 +5,10 @@ artefact_paths:
 artefact_patterns:
   - "*"
 artefact_script: ""
-artefact_size: "200k"
+artefact_size: "300k"
 
-issue_since: 1 day ago
+issue_since: "1 day ago"
 
 trace_fname_prefix: common
-trace_since: 1 day ago
+# -e "trace_since='10 hour ago'"
+trace_since: "1 day ago"
