--- a/playbooks/roles/info_base/tasks/trace.yaml
+++ b/playbooks/roles/info_base/tasks/trace.yaml
@@ -1,16 +1,15 @@
 ---
 - name: Get trace from system log
-  changed_when: _result.stdout
-  failed_when: false
+  changed_when: false
   ansible.builtin.shell:
     cmd: |-
       journalctl --since "{{ trace_since }}" --quiet |
-        grep -F -B 1 -e ' kernel: -----------[ cut here ]------------' |
+        grep -F -B 1 -e ' kernel: ------------[ cut here ]------------' |
         head -n 1
+    executable: /bin/bash
   register: _result
 
 - name: Results of trace
-  when: _result.stdout
   vars:
     _trace_start: "{{ (item | split(' '))[5:] | join(' ') }}"
   ansible.builtin.include_tasks: _trace.yaml
