move sysctl value settings into plain config file

--- a/playbooks/roles/setup_common/files/20tor-system.conf
+++ b/playbooks/roles/setup_common/files/20tor-system.conf
@@ -1,9 +1,13 @@
-# User Namespaces is needed for Snowflake systemd restart
-# module loading is needed e.g. for firewall rules
-
-# DDoS
+# common
+kernel.sysrq = 0
+net.ipv4.tcp_fin_timeout = 10
+net.ipv4.tcp_notsent_lowat = 131072
 net.ipv4.tcp_syncookies = 1
+net.ipv6.ip_nonlocal_bind = 1
 
+# Hints:
+# User namespaces are needed for Snowflake systemd restart.
+# Modules are needed to boot a distribution kernel.
 
 # https://kspp.github.io/Recommended_Settings#sysctls
 
