move uname task from info_base to info_common

--- a/playbooks/roles/info_common/tasks/main.yaml
+++ b/playbooks/roles/info_common/tasks/main.yaml
@@ -26,6 +26,11 @@
       tags:
         - log-nginx
 
+    - name: Uname
+      ansible.builtin.import_tasks: uname.yaml
+      tags:
+        - uname
+
     - name: Uptime
       ansible.builtin.import_tasks: uptime.yaml
       tags:
