test at nrew core dump

--- a/playbooks/roles/info_base/tasks/_artefact.yaml
+++ b/playbooks/roles/info_base/tasks/_artefact.yaml
@@ -1,5 +1,5 @@
 ---
-- name: Check for being known artefact
+- name: Check for a known artefact
   delegate_to: localhost
   throttle: 1
   ansible.builtin.lineinfile:
