--- a/playbooks/roles/info_healthy/tasks/issue.yaml
+++ b/playbooks/roles/info_healthy/tasks/issue.yaml
@@ -25,3 +25,4 @@
     path: "{{ tmp_dir }}/all_issue.log"
     marker: "# {mark} {{ inventory_hostname }} "
     state: "{{ _result.stdout | ternary('present', 'absent') }}"
+  notify: Not Healthy
