--- a/playbooks/roles/info_healthy/tasks/trace.yaml
+++ b/playbooks/roles/info_healthy/tasks/trace.yaml
@@ -1,6 +1,6 @@
 ---
 - name: Get trace from system log
-  changed_when: false
+  changed_when: _result.stdout_lines
   ansible.builtin.shell:
     cmd: |-
       journalctl --since "{{ trace_since }}" --quiet |
@@ -8,6 +8,7 @@
         head -n 1
     executable: /bin/bash
   register: _result
+  notify: Not Healthy
 
 - name: Results of trace
   vars:
