--- a/playbooks/snapshot.yaml
+++ b/playbooks/snapshot.yaml
@@ -3,11 +3,21 @@
   hosts: snapshot
   roles:
     - role: poweron
+      tags:
+        - poweron
     - role: setup_common
-    - role: info_base
+      tags:
+        - setup-common
+    - role: info_healthy
+      tags:
+        - info-healthy
     - role: snapshot
+      tags:
+        - snapshot
 
 - name: Snapshot cleanup
   hosts: localhost
   roles:
     - role: snapshot_cleanup
+      tags:
+        - snapshot-cleanup
