--- a/playbooks/roles/info_common/tasks/uptime.yaml
+++ b/playbooks/roles/info_common/tasks/uptime.yaml
@@ -10,5 +10,5 @@
   throttle: 1
   ansible.builtin.lineinfile:
     line: "{{ inventory_hostname }} Uptime {{ _result.stdout | default('- -') }}"
-    path: "{{ tmp_dir }}/all_uptime"
+    path: "{{ tmp_dir }}/uptime"
     regexp: "^{{ inventory_hostname }} "
