--- a/playbooks/roles/info_healthy/tasks/ipv6.yaml
+++ b/playbooks/roles/info_healthy/tasks/ipv6.yaml
@@ -3,9 +3,9 @@
   delegate_to: localhost
   throttle: 1
   vars:
-    _state: "{{ ansible_facts.default_ipv6.address is defined and ansible_facts.default_ipv6.address is not match('fe80::') }}"
+    _is_public: "{{ ansible_facts.default_ipv6.address is defined and ansible_facts.default_ipv6.address is not match('fe80::') }}"
   ansible.builtin.lineinfile:
     line: "{{ inventory_hostname }} {{ ansible_facts.default_ipv6.address }}"
-    path: "{{ tmp_dir }}/all_ipv6"
+    path: "{{ tmp_dir }}/ipv6_addresses"
     regexp: "^{{ inventory_hostname }} "
-    state: "{{ _state | ternary('present', 'absent') }}"
+    state: "{{ _is_public | ternary('present', 'absent') }}"
