--- a/playbooks/roles/info_healthy/tasks/issue.yaml
+++ b/playbooks/roles/info_healthy/tasks/issue.yaml
@@ -22,7 +22,7 @@
   throttle: 1
   ansible.builtin.blockinfile:
     block: "{{ _result.stdout }}"
-    path: "{{ tmp_dir }}/all_issue.log"
+    path: "{{ tmp_dir }}/issue.log"
     marker: "# {mark} {{ inventory_hostname }} "
     state: "{{ _result.stdout | ternary('present', 'absent') }}"
   notify: Not Healthy
